Fix styles box positioning
Also fixed the overlap issue on smaller screen sizes by removing the
fixed height from the header area and adding a clear.

--- a/form/css/form.css
+++ b/form/css/form.css
@@ -36,6 +36,8 @@ colgroup col:FIRST-CHILD{
 #config-controls {
     float: right;
     text-align: left;
+    clear:right;
+    margin-top:10px;
 }
 #form-header .postbox h3 {
 font-size: 15px;
@@ -69,6 +71,7 @@ margin:10px 0;
 
 #ap_options_form {
 	visibility: hidden;
+	clear:both;
 }
 #initial_load_spinner {
 	position: fixed;
